--- a/CommerceProject/CommerceProject/Pages/Homepage.razor
+++ b/CommerceProject/CommerceProject/Pages/Homepage.razor
@@ -75,12 +75,12 @@
     </div>
     <div class="col-sm-4">
         <div class="container bg-light sticky-top mt-1" style="border:1px solid #cecece">
-            <h2> Account Balance </h2>
-            <BalanceGraph UserEmail="@UserName"></BalanceGraph>
+            <h2> Notifcation Summary </h2>
+            <NotificationGraph UserEmail="@UserName"></NotificationGraph>
         </div>
         <div class="container bg-light sticky-top mt-1" style="border:1px solid #cecece">
             <h2> Account Balance </h2>
-            <NotificationGraph UserEmail="@UserName"></NotificationGraph>
+            <BalanceGraph UserEmail="@UserName"></BalanceGraph>
         </div>
     </div>
 </div>
