--- a/CommerceProject/CommerceProject/Pages/Homepage.razor
+++ b/CommerceProject/CommerceProject/Pages/Homepage.razor
@@ -31,7 +31,7 @@
         <div class="container mt-1 bg-light float-left" style="border:1px solid #cecece">
             <h2 class="mt-2">
                 Notifications
-                <button class="btn btn-info float-right mt-1" type="button" name="spreadsheet_button" @onclick="savespreadsheet">Export to spreadsheet</button>
+                <button class="btn btn-info float-right mt-1" type="button" name="spreadsheet_button" @onclick="savespreadsheet">Export to spreadsheet</button>     @*HERE*@)
             </h2>
             <h6 onclick=@FilterNotificationsByDate()></h6>
             <div>
