--- a/CommerceProject/CommerceProject/Pages/TransactionsPage.razor
+++ b/CommerceProject/CommerceProject/Pages/TransactionsPage.razor
@@ -74,7 +74,7 @@ else
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="submit" class="btn btn-info add-new">Submit</button>
+                                    <button type="submit" class="btn btn-info add-new">Submit</button>          @*HERE*@
                                 </div>
                             </EditForm>
                         </div>
