--- a/CommerceProject/CommerceProject/Pages/Settings.razor
+++ b/CommerceProject/CommerceProject/Pages/Settings.razor
@@ -70,7 +70,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phoneNumber">Phone Number</label>
-                            <input type="text" class="form-control" id="phoneNumber" aria-describedby="lastNameHelp" placeholder="Enter your Phone Number" @bind-value=nametochange.phoneNumber>
+                            <input type="text" class="form-control" id="phoneNumber" aria-describedby="phoneNumberHelp" placeholder="Enter your Phone Number" @bind-value=nametochange.phoneNumber>
                         </div>
                         <div class="form-group">
                             <label for="City">City</label>
@@ -80,7 +80,7 @@
                             <label for="State">State</label>
                             <input type="text" class="form-control" id="State" placeholder="Enter your State" @bind-value=nametochange.state>
                         </div>
-                        <button type="button" class="btn btn-primary" @onclick="UpdateInfo">Submit</button>
+                        <button type="button" class="btn btn-primary" @onclick="UpdateInfo">Submit</button>                                                 @*HERE*@
                     </form>
                 </div>
 
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <hr>
-                    <button type="button" class="btn btn-primary" onclick="@updateNotificationSettings()">Submit</button>
+                    <button type="button" class="btn btn-primary" onclick="@updateNotificationSettings()">Submit</button>                               @*HERE*@
                 </div>
             </div>
         </div>
