add toast to settings page
Add toast to Profile update button
Create null-field check
alter button tag for parameter page
add toast for parameter update button

--- a/CommerceProject/CommerceProject/Pages/Settings.razor
+++ b/CommerceProject/CommerceProject/Pages/Settings.razor
@@ -70,7 +70,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phoneNumber">Phone Number</label>
-                            <input type="text" class="form-control" id="phoneNumber" aria-describedby="phoneNumberHelp" placeholder="Enter your Phone Number" @bind-value=nametochange.phoneNumber>
+                            <input type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" id="phoneNumber" aria-describedby="phoneNumberHelp" placeholder="Enter your Phone Number" @bind-value=nametochange.phoneNumber>
                         </div>
                         <div class="form-group">
                             <label for="City">City</label>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <hr>
-                    <button type="button" class="btn btn-primary" onclick="@updateNotificationSettings()">Submit</button>                               @*HERE*@
+                    <button type="button" class="btn btn-primary" @onclick="updateNotificationSettings">Submit</button>                               @*HERE*@
                 </div>
             </div>
         </div>
@@ -161,9 +161,18 @@
     private string email;
     protected Task UpdateInfo()
     {
-
-        nametochange.email = httpContextAccessor.HttpContext.User.Identity.Name;
-        return _acc.ChangeName(nametochange);
+        if(String.IsNullOrEmpty(nametochange.firstName) || String.IsNullOrEmpty(nametochange.lastName)
+            || String.IsNullOrEmpty(nametochange.phoneNumber) || String.IsNullOrEmpty(nametochange.city) || String.IsNullOrEmpty(nametochange.state))
+        {
+            toastService.ShowWarning("Please fill in all fields.", "Invalid Entry");
+            return Task.CompletedTask;
+        }
+        else
+        {
+            toastService.ShowSuccess("Your information has been updated.", "Update Information");
+            nametochange.email = httpContextAccessor.HttpContext.User.Identity.Name;
+            return _acc.ChangeName(nametochange);
+        }
     }
 
     void toChangePassword()
@@ -216,12 +225,14 @@
     TimeSpan? endTime;
 
 
-    private async Task updateNotificationSettings()
+    private async void updateNotificationSettings()
     {
         decimal min_bal = min_balance ?? 0.00m;
         decimal max_trans = max_transaction ?? 500.00m;
         TimeSpan start = startTime ?? TimeSpan.Parse("00:00:00");
         TimeSpan end = endTime ?? TimeSpan.Parse("04:00:00");
+
+        toastService.ShowSuccess("Your Notification preferences has been updated.", "Update Notifications");
 
         await _Notifications.SetParameters(UserName, timeIsOn, start.ToString(), end.ToString(), withdrawalIsOn,
                                            min_bal, lowBalanceIsOn, max_trans, emailNotIsOn);
