update URL pathing and finish Toast
change button to display "+ Add Transaction" on transaction page
change toast message on homepage, transaction page, and settings page.
change URL of homepage from "~/home" to "~/"
update "Login.cshtml.cs", "Login.cshtml" to reflect new redirect page after login

--- a/CommerceProject/CommerceProject/Pages/Homepage.razor
+++ b/CommerceProject/CommerceProject/Pages/Homepage.razor
@@ -1,4 +1,4 @@
-﻿@page "/home"
+﻿@page "/"
 
 @using CommerceProject.Data
 @using CommerceProject.Services
@@ -153,8 +153,8 @@
     {
         String UserName = httpContextAccessor.HttpContext.User.Identity.Name;
         List<TransactionModel> translist = await trans.GetTransactions(UserName);
-        ExportToSpreadsheet.create_csv(translist);
-        _toastService.ShowSuccess("Transactions .CSV file downloaded to \"Desktop\"");
+        //ExportToSpreadsheet.create_csv(translist);
+        _toastService.ShowInfo("\"TransactionReport.CSV\" has downloaded to \"Desktop\" successfully", "Spreadsheet Created");
     }
 
 }
