--- a/CommerceProject/CommerceProject/Pages/BalanceGraph.razor
+++ b/CommerceProject/CommerceProject/Pages/BalanceGraph.razor
@@ -131,7 +131,7 @@
 
             List<decimal> visual_balances = new List<decimal>();
 
-            for (int i = 0; i < DateTime.Now.Month; i++)
+            for (int i = 1; i <= DateTime.Now.Month; i++)
             {
                 if (avg_monthly_balances.ContainsKey(i))
                 {
@@ -153,7 +153,7 @@
 
             List<decimal> visual_balances = new List<decimal>();
 
-            for (int i = 0; i < 31; i++)
+            for (int i = 1; i <= 31; i++)
             {
                 if (avg_daily_balances.ContainsKey(i))
                 {
